fix align button logout

--- a/less/profile.less
+++ b/less/profile.less
@@ -87,8 +87,9 @@
         {
             color: @color-acent;
             width: 80%;
-            top: 25%;
+            left: 10%;
             position: absolute;
+            top: 25%;
             background-color: #fff;
             box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 1px 5px 0 rgba(0,0,0,0.12),0 3px 1px -2px rgba(0,0,0,0.2);
         }
